--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_12" orientation="portrait" appearance="light"/>
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
@@ -14,34 +14,60 @@
             <objects>
                 <viewController title="ImageList" id="BYZ-38-t0r" customClass="ImagesListViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="3RS-bg-59f">
-                                <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="3RS-bg-59f">
+                                <rect key="frame" x="3" y="-12" width="414" height="896"/>
                                 <color key="backgroundColor" name="YP Black"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationWidth="10" reuseIdentifier="ImagesListCell" rowHeight="224" id="k3P-cT-frT" customClass="ImagesListCell" customModule="ImageFeed" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="50" width="393" height="224"/>
+                                        <rect key="frame" x="0.0" y="50" width="414" height="224"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="k3P-cT-frT" id="dqM-2M-HIb">
-                                            <rect key="frame" x="0.0" y="0.0" width="393" height="224"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="224"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="0" translatesAutoresizingMaskIntoConstraints="NO" id="D4T-Ey-PA1">
-                                                    <rect key="frame" x="16" y="4" width="361" height="216"/>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="0" translatesAutoresizingMaskIntoConstraints="NO" id="D4T-Ey-PA1" userLabel="Cell Image">
+                                                    <rect key="frame" x="16" y="0.0" width="382" height="220"/>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                            <integer key="value" value="16"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskToBounds" value="YES"/>
+                                                    </userDefinedRuntimeAttributes>
                                                 </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="1 сентября 2023" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pmO-lO-BKP" userLabel="Date Lable">
+                                                    <rect key="frame" x="22" y="195" width="130" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tpv-cu-VTe" userLabel="Like Button">
+                                                    <rect key="frame" x="356" y="4" width="42" height="42"/>
+                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                    <state key="normal" image="Like button (Active)"/>
+                                                </button>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
-                                                <constraint firstAttribute="trailing" secondItem="D4T-Ey-PA1" secondAttribute="trailing" constant="16" id="G8K-Oo-Vdh"/>
-                                                <constraint firstItem="D4T-Ey-PA1" firstAttribute="top" secondItem="dqM-2M-HIb" secondAttribute="top" constant="4" id="GDY-I6-TxV"/>
-                                                <constraint firstItem="D4T-Ey-PA1" firstAttribute="leading" secondItem="dqM-2M-HIb" secondAttribute="leading" constant="16" id="pME-Hn-UGb"/>
-                                                <constraint firstAttribute="bottom" secondItem="D4T-Ey-PA1" secondAttribute="bottom" constant="4" id="z1s-vH-trI"/>
+                                                <constraint firstAttribute="bottom" secondItem="D4T-Ey-PA1" secondAttribute="bottom" constant="4" id="14v-Kp-20y"/>
+                                                <constraint firstItem="D4T-Ey-PA1" firstAttribute="top" secondItem="tpv-cu-VTe" secondAttribute="top" id="8CE-cR-NDb"/>
+                                                <constraint firstItem="D4T-Ey-PA1" firstAttribute="bottom" secondItem="pmO-lO-BKP" secondAttribute="bottom" constant="8" id="Bhc-Ql-95u"/>
+                                                <constraint firstItem="tpv-cu-VTe" firstAttribute="trailing" secondItem="D4T-Ey-PA1" secondAttribute="trailing" id="K0L-1h-Ta2"/>
+                                                <constraint firstItem="pmO-lO-BKP" firstAttribute="leading" secondItem="D4T-Ey-PA1" secondAttribute="leading" constant="8" id="LBh-mp-gIt"/>
+                                                <constraint firstAttribute="trailing" secondItem="D4T-Ey-PA1" secondAttribute="trailing" constant="16" id="XWn-sC-mKT"/>
+                                                <constraint firstItem="D4T-Ey-PA1" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="pmO-lO-BKP" secondAttribute="trailing" constant="8" id="g5x-eg-0AS"/>
+                                                <constraint firstItem="D4T-Ey-PA1" firstAttribute="top" secondItem="dqM-2M-HIb" secondAttribute="top" id="gDl-qD-vU8"/>
+                                                <constraint firstItem="D4T-Ey-PA1" firstAttribute="leading" secondItem="dqM-2M-HIb" secondAttribute="leading" constant="16" id="yQl-Rk-zaZ"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" name="YP Black"/>
+                                        <connections>
+                                            <outlet property="cellImage" destination="D4T-Ey-PA1" id="WQB-zN-PMa"/>
+                                            <outlet property="dateLabel" destination="pmO-lO-BKP" id="b8A-LT-21S"/>
+                                            <outlet property="likeButton" destination="tpv-cu-VTe" id="v9S-3W-hzA"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
@@ -52,6 +78,12 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" name="YP Black"/>
+                        <constraints>
+                            <constraint firstItem="3RS-bg-59f" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="D0x-wA-2hX"/>
+                            <constraint firstItem="3RS-bg-59f" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Dsq-TC-sYX"/>
+                            <constraint firstAttribute="bottom" secondItem="3RS-bg-59f" secondAttribute="bottom" id="RQ7-Rw-u5Z"/>
+                            <constraint firstAttribute="trailing" secondItem="3RS-bg-59f" secondAttribute="trailing" id="s9C-0P-sXb"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="tableView" destination="3RS-bg-59f" id="p1y-9f-8eK"/>
@@ -59,11 +91,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="64.885496183206101" y="-2.1126760563380285"/>
+            <point key="canvasLocation" x="63.768115942028992" y="-2.6785714285714284"/>
         </scene>
     </scenes>
     <resources>
         <image name="0" width="200" height="132"/>
+        <image name="Like button (Active)" width="44" height="44"/>
         <namedColor name="YP Black">
             <color red="0.10199999809265137" green="0.10599999874830246" blue="0.13300000131130219" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
