--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="xYJ-G7-SMX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="xYJ-G7-SMX">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -104,8 +104,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="3RS-bg-59f">
-                                <rect key="frame" x="3" y="-12" width="414" height="896"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="3RS-bg-59f">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <color key="backgroundColor" name="YP Black"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationWidth="10" reuseIdentifier="ImagesListCell" rowHeight="224" id="k3P-cT-frT" customClass="ImagesListCell" customModule="ImageFeed" customModuleProvider="target">
@@ -116,7 +116,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="0" translatesAutoresizingMaskIntoConstraints="NO" id="D4T-Ey-PA1" userLabel="Cell Image">
-                                                    <rect key="frame" x="16" y="0.0" width="382" height="220"/>
+                                                    <rect key="frame" x="16" y="4" width="382" height="216"/>
                                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <userDefinedRuntimeAttributes>
                                                         <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -125,14 +125,14 @@
                                                         <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskToBounds" value="YES"/>
                                                     </userDefinedRuntimeAttributes>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="1 сентября 2023" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pmO-lO-BKP" userLabel="Date Lable">
-                                                    <rect key="frame" x="22" y="195" width="130" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1 сентября 2023" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pmO-lO-BKP" userLabel="Date Lable">
+                                                    <rect key="frame" x="24" y="191" width="130" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tpv-cu-VTe" userLabel="Like Button">
-                                                    <rect key="frame" x="356" y="4" width="42" height="42"/>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tpv-cu-VTe" userLabel="Like Button">
+                                                    <rect key="frame" x="354" y="4" width="44" height="44"/>
                                                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                     <state key="normal" image="LikeButtonActive"/>
                                                 </button>
@@ -146,7 +146,7 @@
                                                 <constraint firstItem="pmO-lO-BKP" firstAttribute="leading" secondItem="D4T-Ey-PA1" secondAttribute="leading" constant="8" id="LBh-mp-gIt"/>
                                                 <constraint firstAttribute="trailing" secondItem="D4T-Ey-PA1" secondAttribute="trailing" constant="16" id="XWn-sC-mKT"/>
                                                 <constraint firstItem="D4T-Ey-PA1" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="pmO-lO-BKP" secondAttribute="trailing" constant="8" id="g5x-eg-0AS"/>
-                                                <constraint firstItem="D4T-Ey-PA1" firstAttribute="top" secondItem="dqM-2M-HIb" secondAttribute="top" id="gDl-qD-vU8"/>
+                                                <constraint firstItem="D4T-Ey-PA1" firstAttribute="top" secondItem="dqM-2M-HIb" secondAttribute="top" constant="4" id="gDl-qD-vU8"/>
                                                 <constraint firstItem="D4T-Ey-PA1" firstAttribute="leading" secondItem="dqM-2M-HIb" secondAttribute="leading" constant="16" id="yQl-Rk-zaZ"/>
                                             </constraints>
                                         </tableViewCellContentView>
@@ -192,9 +192,25 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="0" translatesAutoresizingMaskIntoConstraints="NO" id="ZTz-gk-DnW" userLabel="Image View">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hv2-th-H11">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                            </imageView>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="0" translatesAutoresizingMaskIntoConstraints="NO" id="ZTz-gk-DnW" userLabel="Image View">
+                                        <rect key="frame" x="0.0" y="0.0" width="200" height="132"/>
+                                    </imageView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="ZTz-gk-DnW" firstAttribute="leading" secondItem="Hv2-th-H11" secondAttribute="leading" id="Fmv-VV-80i"/>
+                                    <constraint firstItem="ZTz-gk-DnW" firstAttribute="trailing" secondItem="Hv2-th-H11" secondAttribute="trailing" id="RpM-zI-1Xo"/>
+                                    <constraint firstItem="ZTz-gk-DnW" firstAttribute="bottom" secondItem="Hv2-th-H11" secondAttribute="bottom" id="epU-5b-7vl"/>
+                                    <constraint firstItem="ZTz-gk-DnW" firstAttribute="top" secondItem="Hv2-th-H11" secondAttribute="top" id="s1F-lk-2n3"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="6ho-j8-BlO"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="Jb1-qU-eaP"/>
+                                <connections>
+                                    <outlet property="delegate" destination="uCN-Vg-pDh" id="c8W-uq-5uP"/>
+                                </connections>
+                            </scrollView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0NH-XV-3TJ" userLabel="ButtonBack">
                                 <rect key="frame" x="8" y="8" width="48" height="48"/>
                                 <constraints>
@@ -210,19 +226,37 @@
                                     <action selector="buttonBack:" destination="uCN-Vg-pDh" eventType="touchUpInside" id="6bG-0W-rXy"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ala-bQ-PIO" userLabel="ButtonShare">
+                                <rect key="frame" x="182" y="810" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="0wg-gx-XKh"/>
+                                    <constraint firstAttribute="width" constant="50" id="5Xf-Eq-6te"/>
+                                </constraints>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="SharingButton"/>
+                                <connections>
+                                    <action selector="didTapShareButton:" destination="uCN-Vg-pDh" eventType="touchUpInside" id="Gyy-Gw-lYH"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="D75-Il-Mbw"/>
                         <color key="backgroundColor" name="YP Black"/>
                         <constraints>
-                            <constraint firstItem="ZTz-gk-DnW" firstAttribute="leading" secondItem="D75-Il-Mbw" secondAttribute="leading" id="G4n-wl-diG"/>
-                            <constraint firstItem="ZTz-gk-DnW" firstAttribute="top" secondItem="c5a-un-E5Z" secondAttribute="top" id="KvW-wG-8WA"/>
+                            <constraint firstAttribute="bottom" secondItem="Hv2-th-H11" secondAttribute="bottom" id="91r-Rn-R7m"/>
+                            <constraint firstAttribute="trailing" secondItem="Hv2-th-H11" secondAttribute="trailing" id="H5b-R4-cCg"/>
                             <constraint firstItem="0NH-XV-3TJ" firstAttribute="top" secondItem="D75-Il-Mbw" secondAttribute="top" constant="8" id="PPQ-Ik-Csh"/>
+                            <constraint firstItem="Hv2-th-H11" firstAttribute="leading" secondItem="c5a-un-E5Z" secondAttribute="leading" id="Ruh-J3-xBO"/>
                             <constraint firstItem="0NH-XV-3TJ" firstAttribute="leading" secondItem="D75-Il-Mbw" secondAttribute="leading" constant="8" id="c5P-GU-P5D"/>
-                            <constraint firstAttribute="bottom" secondItem="ZTz-gk-DnW" secondAttribute="bottom" id="fUB-Tm-Ll4"/>
-                            <constraint firstItem="ZTz-gk-DnW" firstAttribute="trailing" secondItem="D75-Il-Mbw" secondAttribute="trailing" id="nrb-e5-PuC"/>
+                            <constraint firstItem="ala-bQ-PIO" firstAttribute="centerX" secondItem="c5a-un-E5Z" secondAttribute="centerX" id="oiR-B7-945"/>
+                            <constraint firstItem="D75-Il-Mbw" firstAttribute="bottom" secondItem="ala-bQ-PIO" secondAttribute="bottom" constant="36" id="rw9-7y-qQS"/>
+                            <constraint firstItem="Hv2-th-H11" firstAttribute="top" secondItem="c5a-un-E5Z" secondAttribute="top" id="unT-19-p8p"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="tJA-80-zUV"/>
+                    <connections>
+                        <outlet property="imageView" destination="ZTz-gk-DnW" id="dGn-Ie-EEu"/>
+                        <outlet property="scrollView" destination="Hv2-th-H11" id="RZh-Cm-9L6"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="apa-O6-GKX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -234,6 +268,7 @@
         <image name="ExitButton" width="44" height="44"/>
         <image name="LikeButtonActive" width="44" height="44"/>
         <image name="NavigationBarBackward" width="24" height="24"/>
+        <image name="SharingButton" width="51" height="50"/>
         <image name="TabBarFeedActive" width="30" height="30"/>
         <image name="TabBarProfileActive" width="30" height="30"/>
         <image name="UserpickPhoto" width="35" height="35"/>
